--- a/experiment.tex
+++ b/experiment.tex
@@ -5,7 +5,7 @@
 
 \begin{figure}[hb]
 \begin{center}
-\epsfig{file=figs/picts/1, width=.3\textwidth}
+\epsfig{file=figs/picts/1, width=.5\textwidth}
 \end{center}
 \caption{Схема плоской модельной установки}\label{device:pict}
 \end{figure}
@@ -37,7 +37,7 @@
 
 \begin{figure}[hb]
 \begin{center}
-\epsfig{file=figs/picts/5, width=.3\textwidth}
+\epsfig{file=figs/picts/5, width=.5\textwidth}
 \end{center}
 \caption{Схема расположения датчиков в нижней и верхней крышках}\label{device3:pict}
 \end{figure}
@@ -50,16 +50,16 @@
 
 \subsection{Используемый материал}
 
-Выбор среды, моделирующей коллектор, определяется постановкой решаемых экспериментальных задач. Целью данного исследования является экспериментальное моделирование ГРП с возможностью переноса результатов экспериментов на пластовые условия. Но помимо критериев подобия, отвечающих за возможность такого переноса~\cite{cleary1994}, важнейшую роль играют технологические факторы, связанные с возможностью изготовления экспериментальных образцов. С этой точки зрения смесь на основе гипса с добавкой портландцемента является хорошим выбором. Хорошая текучесть смеси и отсутствие усадки при затвердевании позволяет добиться плотного контакта со стенками установки. Для замедления схватывания гипса в воду для приготовления смеси добавляется лимонная кислота в концентрации 2 г/дм$^3$. Описание экспериментов по определению прочностных и фильтрационных характеристик образца можно найти  в~\cite{trimonova2017, trimonova2018}. Экспериментально были получены следующие величины:
+Выбор среды, моделирующей коллектор, определяется постановкой решаемых экспериментальных задач. Целью данного исследования является экспериментальное моделирование ГРП с возможностью переноса результатов экспериментов на пластовые условия. Но помимо критериев подобия, отвечающих за возможность такого переноса~\cite{cleary1994}, важнейшую роль играют технологические факторы, связанные с возможностью изготовления экспериментальных образцов. С этой точки зрения смесь на основе гипса с добавкой портландцемента является хорошим выбором. Хорошая текучесть смеси и отсутствие усадки при затвердевании позволяет добиться плотного контакта со стенками установки. Для замедления схватывания гипса в воду для приготовления смеси добавляется лимонная кислота в концентрации 2 г/дм$^3$. Описание экспериментов по определению прочностных и фильтрационных характеристик образца можно найти  в~\cite{trimonova2017, trimonova2018}. 
+
+Следующие величины были получены экспериментально:
 \begin{description}
 %
-\item $\nu_\text{dyn} \;\;\,  = 0.20$~-- динамический коэффициент Пуассона,
-\item $\nu_\text{st} \;= 0.33$~-- статический коэффициент Пуассона,
-\item $\varphi \;\;= 0.19$~-- пористость пласта,
-\item $E_\text{dyn} \,\,    = 1.4 \times 10^{10}\;$  [Н/м$^2$]~-- динамический модуль Юнга, 
-\item $E_\text{st} \,\,    = 1.4 \times 10^{10}\;$  [Н/м$^2$]~-- статический модуль Юнга, 
-\item $K_u   = 1.6 \times 10^{10}\,$ [Н/м$^2$]~-- недренированный объемный модуль сжатия,
-\item $k \;\;\,    = 1.9 \times 10^2\;\,$  [мД]~-- коэффициент абсолютной проницаемости пласта.
+\item $\nu_\text{dyn} \;\;\,  = 0.25$~-- динамический коэффициент Пуассона,
+\item $\nu_\text{st} \;= 0.2$~-- статический коэффициент Пуассона,
+\item $E_\text{dyn} \,\,    = 7.5 \times 10^{9}\;$  [Па]~-- динамический модуль Юнга, 
+\item $E_\text{st} \,\,    = 3.7 \times 10^{9}\;$  [Па]~-- статический модуль Юнга, 
+\item $k \;\;\,    = 2.4 \;\,$  [мД]~-- коэффициент абсолютной проницаемости пласта.
 
 %
 \end{description}
@@ -68,11 +68,11 @@
 
 В настоящем разделе приведено описание одного из экспериментов. Эксперимент проводился без гидроразрыва пласта для  проверки теории однофазной фильтрации на кривых падения давления. Для этого во вспомогательные скважины сначала закачивался растрор гипса с целью насыщения образца и создания в нем стационарного поля порового давления, после чего давление в нагнетательной скважине сбрасывалось. Соответственно поровое давление в датчиках начинало спадать, и это фиксировалось в течение всего процесса падения давления. Давления в датчиках записывалось каждые 0.01 секунды. 
 
-Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами $\[( 0.057, 0.127 ), (-0.057, -0.127) \]$ и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами $\[(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)\]$.  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20 атм, где $1 атм = 101335 Па$), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5 атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах, и переставало меняться. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок ~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
+Для создания этого эксперимента перед заливкой гипса на дно установки фиксировались вспомогательные скважины в точках с координатами [( 0.057, 0.127 ), (-0.057, -0.127)] и центральная скважина. На дно установки монтировались датчики давления согласно рисунку 4 в точках с координатами [(0.057, -0.127), (0.07, 0.0), (-0.057, 0.127), (0.0, 0.127), (0.0, -0.185), (0.065, 0.065), (-0.121, 0.121), (0.0, 0.07), (0.121, 0.121), (0.127, 0.0), (0.0, -0.07), (0.0, 0.0), (-0.185, 0.0)].  Измеренное в датчиках давление соответствовало давлению на расстоянии 4 мм от дна образца. Далее заливался гипс и высушивался в течение 2-3 дней. После затвердевания образца вспомогательные боковые скважины удалялись. Далее, как упоминалось выше, сверху на образец подавалось давление (20 атм, где $1 atm = 101335 Па$), имитируя литостатическое давление. Давление в боковых камерах не задавалось. После этого во вспомогательную скважину с координатами центра $(0.057, 0.127 )$ и радиусом 7.5~мм закачивался раствор гипса с постоянным давлением (14.5 атм). Другая скважина была соединена с атмосферой. Насыщение образца продолжалось до установления в нем стационарного режима. Установление режима определялось по давлению в  центре $(0, 0)$. Когда давление в ней достигало значения, равного полусумме давлений, заданных в боковых скважинах, и переставало меняться. После этого раствор в нагнетательную скважину переставал подаваться. Кривые давления в датчиках порового давления фиксировались в течение всего эксперимента (рисунок ~\ref{device4:pict}) . Длительность всего эксперимента составила примерно 220~мин. 
 
 \begin{figure}[hb]
 \begin{center}
-\epsfig{file=figs/picts/6, width=.3\textwidth}
+\epsfig{file=figs/picts/6, width=.5\textwidth}
 \end{center}
 \caption{Кривые давления в датчиках порового давления}\label{device4:pict}
 \end{figure}
@@ -89,17 +89,17 @@
 \caption{Схематический вид образца с приклываемыми нагрузками}\label{device5:pict}
 \end{figure}
 
-Нижняя крышка установки зафиксирована жестко по вертикали, следовательно нижняя поверхность образца не может перемещаться вдоль оси $\,athcal{O}z$ под действием вертикальной нагрузки. Таким образом, на низ образца ставится граничное условие Дирихле на перемещение (нулевое) по оси  $\,athcal{O}z$: $u_z = 0$.
+Нижняя крышка установки зафиксирована жестко по вертикали, следовательно нижняя поверхность образца не может перемещаться вдоль оси $\mathcal{OZ}$ под действием вертикальной нагрузки. Таким образом, на низ образца ставится граничное условие Дирихле на перемещение (нулевое) по оси  $\mathcal{OZ}$: $u_z = 0$.
 
-Чтобы исключить поворот образца вокруг своей оси и сдвига образца в плоскости $\,athcal{O}xy$. Для исключения таких перемещений можно поставить граничное условие Дирихле на всю боковую поверхноть образца в виде нулевого касательного перемещения в плоскости XY: $\vc{u}*\vc{e_\tau}=0$, где  $\vc{u}=(u_x, u_y, u_z)$, $\vc{e_\tau}=(-n_y, n_x, 0)$. То есть, граничное условие может быть переписано в виде: $-n_y*u_x + n_x*u_y=0$
+Чтобы исключить поворот образца вокруг своей оси и сдвига образца в плоскости $\mathcal{OXY}$. Для исключения таких перемещений можно поставить граничное условие Дирихле на всю боковую поверхноть образца в виде нулевого касательного перемещения в плоскости XY: $\vc{u}*\vc{e_\tau}=0$, где  $\vc{u}=(u_x, u_y, u_z)$, $\vc{e_\tau}=(-n_y, n_x, 0)$. То есть, граничное условие может быть переписано в виде: $-n_y*u_x + n_x*u_y=0$
 
-Так же к граничным условиям для задачи упругости необходимо добавить условия на вспомогательные скважины, которые следуют из того факта, что в нагнетательную скважину закачивается жидкость под давлением, а добывающая связана с атмосферой. Таким образом, на скважины необходимо поставить условие Неймана на нормальные напряжение. На нагнетательную: $\sigma_n = P_text\{inj}=14.5~atm$; на добывающую: $\sigma_n =P_\text{prod}=1~atm$.
+Так же к граничным условиям для задачи упругости необходимо добавить условия на вспомогательные скважины, которые следуют из того факта, что в нагнетательную скважину закачивается жидкость под давлением, а добывающая связана с атмосферой. Таким образом, на скважины необходимо поставить условие Неймана на нормальные напряжение. На нагнетательную: $\sigma_n = P_\text{inj}=14.5~atm$; на добывающую: $\sigma_n =P_\text{prod}=1~atm$.
 
 \subsection{Граничные условия для задачи фильтрации}
 
 На верхнюю, нижнюю, боковую поверхности образца ставится условие непротикания. Это условие означает нулевой поток через данные поверхности, который, в свою очередь линейно зависит от градиента давления. То есть, граничное условие представляет собой условие Неймана на давление: $ \partial P/\partial\vc{n} = 0$
 
-На вспомогательные скважины сначала задаются постоянные давления: в нагнетательную скважину закачивается раствор гипса под давлением 14.5 атм, а добывающая скважина связана с атмосферой. После установления стационарного режима закачка раствора в нагнетательную скважину прекращается, а добывающая скважина так же связана с атмосферой. Таким образом, на всю поверхность нагнетательной скважины с координатами  $(0.057, 0.127 )$ ставится граничное условие Дирихле: $P_\text{inj}=14.5~atm$ до достиженя стационарного режима. Далее, когда подача раствора прекращается, на нее ставится уже условие Неймана  $ \partial P/\partial\vc{n} = 0$ до конца эксперимента. На добывающую скважину с координатами  $(-0.057, -0.127 )$ ставится граничное условие Дирихле в течение всего эксперимента: $P_text\{prod}=1~atm$.
+На вспомогательные скважины сначала задаются постоянные давления: в нагнетательную скважину закачивается раствор гипса под давлением 14.5 атм, а добывающая скважина связана с атмосферой. После установления стационарного режима закачка раствора в нагнетательную скважину прекращается, а добывающая скважина так же связана с атмосферой. Таким образом, на всю поверхность нагнетательной скважины с координатами  $(0.057, 0.127 )$ ставится граничное условие Дирихле: $P_\text{inj}=14.5~atm$ до достиженя стационарного режима. Далее, когда подача раствора прекращается, на нее ставится уже условие Неймана  $ \partial P/\partial\vc{n} = 0$ до конца эксперимента. На добывающую скважину с координатами  $(-0.057, -0.127 )$ ставится граничное условие Дирихле в течение всего эксперимента: $P_\text{prod}=1~atm$.
 
 \section{Численный эксперимент}
 
