--- a/references.tex
+++ b/references.tex
@@ -118,10 +118,15 @@ V.~251, \No~1, pp.~310--340.
 Terzaghi~K. Soil mechanics in engineering practice. John Wiley \& Sons, 1996.
 
 \bibitem[Trimonova2017]{trimonova2017}
-Trimonova~M., Baryshnikov~N., Zenchenko~E., Zenchenko~P., Turuntaev~S., 
+Trimonova~M., Baryshnikov~N., Zenchenko~E., Zenchenko~P., Turuntaev~S.
 The Study of the Unstable Fracure Propagation in the Injection Well: Numerical and Laboratory Modeling. // 
 Society of Petroleum Engineers, 2017, October 16. 
 Conference paper. 187822-MS. 
+
+\bibitem[Trimonova2018]{trimonova2018}
+Trimonova~M., Baryshnikov~N., Zenchenko~E., Zenchenko~P., Turuntaev~S., Aigozhieva~A.
+Estimation of the Hydraulic Fracture Propagation Rate in the Laboratory Experiment. // 
+Physical and Mathematical Modeling of Earth and Environment Processes. 2018.
 
 \bibitem[Vermeer1981]{vermeer1981}
 Vermeer~P.A., Verruijt~A.
